Changes/adjustments UI

--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/MedicalInterview/AdditionalComponents/ShowPatientsDiseasesComponent.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/MedicalInterview/AdditionalComponents/ShowPatientsDiseasesComponent.razor
@@ -32,6 +32,6 @@
 
 @code {
     [CascadingParameter]
-    public List<PatientsDiseaseDto> PatientsDiseasesDtos { get; set; } = new();
+    public List<PatientsDiseaseDto> PatientsDiseasesDtos { get; set; } 
 
 }
