--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports/CreateReportForm.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/Reports/CreateReportForm.razor
@@ -194,6 +194,7 @@
         reportAddingFailed = false;
         reportAddedSuccesfully = false;
         isReportBeingAdded = true;
+        StateHasChanged();
         //
         MakeFileStreams();
         GetPatientsAnswers();
