--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Prescriptions/AdditionalComponents/DoctorsPrescriptionsComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Prescriptions/AdditionalComponents/DoctorsPrescriptionsComponent.razor
@@ -101,7 +101,7 @@
     private async Task GetDoctorsRequests()
     {
         readingPrescriptions = true;
-        var prescriptionRequests = await _doctorApiService.GetPrescriptionRequests(TokenSource.Token);
+        prescriptionRequests = await _doctorApiService.GetPrescriptionRequests(TokenSource.Token);
         if (prescriptionRequests.Count > 0) { filesGet = true; }
         StateHasChanged();
         readingPrescriptions = false;
