--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MainPanel/AdditionalComponents/PatientsDoctorsComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MainPanel/AdditionalComponents/PatientsDoctorsComponent.razor
@@ -24,6 +24,12 @@
 
                     </MudListItem>
                 }
+                @if (patientsDoctors.Count() == 0)
+                {
+                    <MudListItem >
+                        Nie posiadasz jeszcze żadnych przypisanych lekarzy
+                    </MudListItem>
+                }
             </MudList>
         </MudPaper>            
     </section>
