--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/AdditionalComponents/PatientsReportsComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/AdditionalComponents/PatientsReportsComponent.razor
@@ -60,10 +60,11 @@
     protected async override Task OnInitializedAsync()
     {
         readingReports = true;
-        var reportsToShow = await _patientApiService.GetReports(TokenSource.Token);
+        reportsToShow = await _patientApiService.GetReports(TokenSource.Token);
         if (reportsToShow.Count > 0) { filesGet = true; }
-        StateHasChanged();
         readingReports = false;
+        StateHasChanged();
+        
 
     }
 
