--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/AdditionalComponents/ReportPreviewComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/AdditionalComponents/ReportPreviewComponent.razor
@@ -61,7 +61,7 @@
                         <div class="list-group-item">
                             <div class="row mt-4 mb-3">
                                 <p>@questionList[i]</p>
-                                <p>@ReportToShow.PatientsAnswersForQuestions[i]</p>
+                                @* <p>@ReportToShow.PatientsAnswersForQuestions[i]</p> *@
                             </div>
                         </div>
 
