--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/Reports.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/Reports.razor
@@ -20,45 +20,45 @@
 
 @implements IDisposable
 
-<div class="container px-4">
+<div class="container px-4 position-relative">
+    
+    
+    <section>
+        <div class="row text-center">
+            <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;">
+                <h3></h3>
+                <NavLink href="/pacjent/dodaj-raport">
+                    <btn type="button" class="btn btn-outline-primary btn-custom-outline">
+                        Zloz raport tutaj
+                    </btn>
+                </NavLink>
+            </MudPaper>
+        </div>
+    </section>
+    <section>
+        @if (mainComponentInitialized)
+        {
+            <div class="row">
+                <div class="col">
+                    <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;">
+                        <Patient.Api.Components.Pages.PatientPages.Reports.AdditionalComponents.PatientsReportsComponent TokenSource="TokenSource" />
+                    </MudPaper>
+                </div>
+                <div class="col">
+                </div>
+            </div>
+        }
+        else
+        {
+            <MudProgressCircular Color="Color.Primary" Indeterminate="true"/>
+        }
+
+    </section>
+    
     @if (showReminder)
     {
         <section>
             <Patient.Api.Components.ManageComponents.FullfillMedicalInterviewReminderComponent />
-        </section>
-    }
-    else
-    {
-        <section>
-            <div class="row text-center">
-                <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;">
-                    <h3></h3>
-                    <NavLink href="/pacjent/dodaj-raport">
-                        <btn type="button" class="btn btn-outline-primary btn-custom-outline">
-                            Zloz raport tutaj
-                        </btn>
-                    </NavLink>
-                </MudPaper>
-            </div>
-        </section>
-        <section>
-            @if (mainComponentInitialized)
-            {
-                <div class="row">
-                    <div class="col">
-                        <MudPaper Class="pa-4 ma-3 summary-item" Elevation="3" Style="cursor: pointer;">
-                            <Patient.Api.Components.Pages.PatientPages.Reports.AdditionalComponents.PatientsReportsComponent TokenSource="TokenSource" />
-                        </MudPaper>
-                    </div>
-                    <div class="col">
-                    </div>
-                </div>
-            }
-            else
-            {
-                <MudProgressCircular Color="Color.Primary" Indeterminate="true"/>
-            }
-
         </section>
     }
     
@@ -76,7 +76,7 @@
 
     protected async override Task OnInitializedAsync()
     {
-        await Task.Delay(500);
+        await Task.Delay(100);
 
         var currentUser = await _userContext.GetCurrentUserAsync();
 
