--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MainPanel/Home.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MainPanel/Home.razor
@@ -18,7 +18,7 @@
 
 @implements IDisposable
 
-<div class="container px-4">
+<div class="container px-4 position-relative">
     
     @if(patientsCurrentlyCuredDiseasesNumber==0 && isCount==true)
     {
